package org.foxgames.models;

public class PlayerData {
}
