package org.foxgames.storyBranch.battle.models;

public class BattleResult {
}
