


@startuml

class Bug {
  - name : String
  - type : String
  - maxHealth : Integer
  - curHealth : Integer
  - defense : Integer
  - attack : Integer
  + attack(Bug bug) : Integer
  + defend() : void
  + heal(Integer health) : void
  + heal() : void
}

class BugFactory {
  + createBug(PlayerData data) : Bug
  + createBug(PlayerData data, Integer quantity) : List<Bug>
}

class BattleBranch {
  + play(PlayerData playerData) : PlayerData playerData
}

class BattleLoop {
  + battle(Bug player, List<Bug> enemies) : BattleResult
}

class BattleResult {
  - didWin : Boolean
  - battleLog : List<String>
}

class PlayerData {
  - playerBug : Bug
  - stage : Integer
}

BattleBranch --> BattleLoop
BattleBranch --> BugFactory
BattleBranch --> Bug
BattleLoop --> BattleResult

@enduml
